# py-volterra

./: .gitignore  .pre-commit-config.yaml  LICENSE  MATHEMATICAL_AUDIT_REPORT.md  README.md  RUN_AUDIT.md  SESSION_2_COMPLETE.md  SESSION_3_COMPLETE.md  SESSION_4_COMPLETE.md  SESSION_COMPLETE.md  TEST_COVERAGE_REPORT.md  TT_ALS_IMPLEMENTATION.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
benchmarks/: README.md  benchmark_gmp_inference.py  benchmark_model_comparison.py  benchmark_mp_inference.py  benchmark_tt_fit.py
examples/: benchmark.py  benchmark_full_order.py  demo.py  demo_full_order.py  mathematical_correctness_audit.py  validation.py  validation_full_order.py
notebooks/: 00_quickstart_mp.ipynb  01_gmp_cross_terms.ipynb  02_tt_full_mimo_demo.ipynb  03_model_selector.ipynb  04_instrument_plus_room_pipeline.ipynb
tests/: __init__.py  test_acoustic_chain.py  test_block_processing.py  test_engines_optimized.py  test_fft_optimization.py  test_gmp.py  test_harmonic_generation.py  test_invariants_and_properties.py  test_mimo_rls.py  test_model_selection.py  test_multitone_estimation.py  test_polynomial_validation.py  test_shape_utilities.py  test_tt_als_real.py  test_tt_analytical.py  test_tt_primitives.py  test_tt_primitives_full.py  test_tt_solvers_full.py  test_tt_volterra_full.py  test_tt_volterra_identifier.py  test_vectorization.py
volterra/: __init__.py  engines.py  engines_diagonal.py  engines_fft.py  engines_optimized.py  engines_vectorized.py  estimation.py  kernels.py  kernels_full.py  processor.py  processor_full.py  sweep.py
volterra/model_selection/: __init__.py  selector.py
volterra/models/: __init__.py  gmp.py  tt_predict.py  tt_volterra.py  tt_volterra_full.py
volterra/pipelines/: __init__.py  acoustic_chain.py
volterra/tt/: __init__.py  tt_als_mimo.py  tt_cores.py  tt_solvers.py  tt_solvers_full.py  tt_solvers_simple.py  tt_tensor.py
volterra/utils/: __init__.py  shapes.py
