[project]
name = "py-volterra"
version = "0.2.0"
description = "Python implementation of Volterra series for nonlinear audio processing and harmonic distortion modeling (up to 5th order kernels)"
authors = [
    {name = "anatrini"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["volterra", "audio", "nonlinear", "distortion", "dsp", "harmonic", "saturation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
# Performance optimization (10x speedup for higher orders)
performance = [
    "numba>=0.58.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
]

# Development and examples
dev = [
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "numba>=0.58.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Complete installation (all features)
all = [
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "numba>=0.58.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["volterra"]
