[project]
name = "py-volterra"
version = "0.8.0"
description = "Tensor-Train based Volterra system identification for MIMO nonlinear systems: Memory Polynomial, GMP, and full TT-Volterra with automatic model selection"
authors = [
    {name = "anatrini"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["volterra", "audio", "nonlinear", "distortion", "dsp", "harmonic", "saturation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
# Performance optimization (10x speedup for higher orders)
performance = [
    "numba>=0.58.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
]

# Development and examples
dev = [
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "numba>=0.58.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "nbval>=0.10.0",
]

# Complete installation (all features)
all = [
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "numba>=0.58.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["volterra"]

# ============================================================================
# Code Quality Tools Configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
    "E741",   # Ambiguous variable name (I, O are standard in MIMO literature)
    "B007",   # Unused loop variable (sometimes needed for readability)
    "B008",   # Do not perform function calls in argument defaults (dataclasses need this)
    "T201",   # Print found (needed in examples/notebooks)
    "NPY002", # Legacy np.random (still widely used, compatible)
    "RET504", # Unnecessary variable assignment before return
    "RET505", # Unnecessary else after return (readability preference)
    "SIM108", # Use ternary operator (readability preference)
    "RUF002", # Ambiguous unicode (mathematical symbols intentional)
    "RUF005", # Collection literal concatenation (readability preference)
    "RUF059", # Unpacked variable unused (sometimes needed for clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",   # Unused function arguments (fixtures)
    "ARG002",   # Unused method arguments
    "E702",     # Multiple statements on one line (compact initialization)
    "RUF043",   # pytest.raises regex patterns (readability)
    "SIM101",   # Duplicate isinstance (explicit intent)
]
"notebooks/*" = ["T201", "T203"]  # Allow print in notebooks

[tool.ruff.lint.isort]
known-first-party = ["volterra"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | \.egg-info
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too strict for scientific computing
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false  # Allow extra ignores for forward compatibility
warn_no_return = true
no_implicit_optional = false  # Allow implicit Optional (common in scientific code)
strict_equality = true

# Permissive for complex models with optional state (gradual typing approach)
# These modules use stateful patterns with optional attributes that would require
# extensive refactoring to type correctly. Using strict_optional=false is standard
# practice for gradual typing of complex stateful code.
[[tool.mypy.overrides]]
module = "volterra.models.*"
warn_return_any = false
strict_optional = false
check_untyped_defs = false
disable_error_code = ["var-annotated", "assignment", "arg-type"]

[[tool.mypy.overrides]]
module = "volterra.model_selection.*"
warn_return_any = false
strict_optional = false
check_untyped_defs = false

# Permissive for complex internal tensor operations (extensive refactor needed for full typing)
[[tool.mypy.overrides]]
module = "volterra.tt.*"
warn_return_any = false
strict_optional = false
check_untyped_defs = false
disable_error_code = ["assignment", "return-value"]

[[tool.mypy.overrides]]
module = "volterra.engines_fft"
warn_return_any = false
strict_optional = false
disable_error_code = ["assignment", "index"]

[[tool.mypy.overrides]]
module = "volterra.engines_optimized"
warn_return_any = false

[[tool.mypy.overrides]]
module = "volterra.processor_full"
warn_return_any = false
strict_optional = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "volterra.kernels_full"
warn_return_any = false
strict_optional = false
disable_error_code = ["arg-type"]

# External dependencies
[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=volterra",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multiple components)",
    "slow: Slow tests (> 1s per test)",
    "notebook: Notebook execution tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["volterra"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
